# tabularepimdl

./: .gitignore  AgentCounterModelTry.html  AgentCounterModelTry.ipynb  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmark/: BirthProcessDispatcher.py  BirthProcessRunner.py  BirthProcess_Run_n_Visual.py  MultiStrainInfectiousProcessDispatcher.py  MultiStrainInfectiousProcessRunner.py  MultiStrainInfectiousProcess_Run_n_Visual.py  Run_n_Visual.py  SInfect_Run_n_Visual.py  STrans_Run_n_Visual.py  SharedTraitInfectionDispatcher.py  SharedTraitInfectionRunner.py  SharedTraitInfection_Run_n_Visual.py  SimpleInfectionDispatcher.py  SimpleInfectionRunner.py  SimpleInfection_Run_n_Visual.py  SimpleObservationProcessDispatcher.py  SimpleObservationProcessRunner.py  SimpleObservationProcess_Run_n_Visual.py  SimpleTransitionDispatcher.py  SimpleTransitionRunner.py  SimpleTransition_Run_n_Visual.py  StateBasedDeathDispatcher.py  StateBasedDeathRunner.py  StateBasedDeath_Run_n_Visual.py  Visualizer.py  WAIFWTransmissionDispatcher.py  WAIFWTransmissionRunner.py  WAIFWTransmission_Run_n_Visual.py
benchmarks/: benchmark_WAIFW.py  benchmark_arrayops.py  benchmark_arrayops_plots.py  benchmark_basicSIR.py  benchmark_matrixopsutils.py  benchmark_matrixopsutils_plots.py  benchmark_meta_groupedcount.py  benchmark_meta_groupedcount_plot.py  benchmark_meta_groupedsum.py  benchmark_meta_groupedsum_plots.py  benchmark_meta_maskedsum.py  benchmark_meta_maskedsum_plots.py  benchmark_utils.py  orchestrate_arrayops.py  orchestrate_matrixopsutils.py  (+3 more)
docs/: EpiModel_spec.md  (+11 more)
(+141 files in other folders)
