# pyproject.toml for tabularepimdl

[project]
name = "tabularepimdl"
version = "0.1.0"
description = "Flexible, rule-based epidemic modeling for multi-population settings."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "numba>=0.56",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Add others as needed
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "mypy>=1.7",
    "ruff>=0.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = ["*_pytest.py", "test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.11"
files = ["tabularepimdl", "epitest"]
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint.per-file-ignores]
"docs/**/*" = [
    "INP001", # Implicit namespace package
]
"epitest/**/*" = [
    "INP001", # Implicit namespace package
    "S101",   # Use of `assert` detected
]